Add support for noto cjk fonts

--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -57,6 +57,7 @@
 % \par\noindent\DescribeMacro{winfont} 使用简体中文Windows系统下的中文字体，自动判断Windows系统版本，采用winnewfont或winoldfont 的设置。\cite[\S 4.3]{ctexdoc}
 % \par\noindent\DescribeMacro{winnewfont}使用简体中文Windows Vista或之后系统下的中易字体和微软雅黑字体。
 % \par\noindent\DescribeMacro{winoldfont}使用简体中文Windows XP或之前系统下的中易字体。\cite[\S 4.3]{ctexdoc}
+% \par\noindent\DescribeMacro{notofont}宋体和黑体使用Google和Adobe共同开发的思源字体，其他字体采用\CTeX 默认设置。\footnote{思源字体可以前往\href{https://ctan.org/pkg/notocjksc}{CTAN下载}（该宏包的支持还没有完成，目前只有字体）}
 % \par\noindent\DescribeMacro{nofont}不配置中文字体，需要用户自己配置|\songti|和|\heiti|命令。\cite[\S 4.3]{ctexdoc}
 % 
 % \subsection{页脚样式设置}
