--- a/ExampleTrans/exampleTrans.tex
+++ b/ExampleTrans/exampleTrans.tex
@@ -1,8 +1,8 @@
-\documentclass[supercite]{HustGraduPaper}
+\documentclass[supercite]{HustGraduTrans}
 %进行个人信息设置
-\title{论文题目} %论文题目
+\title{论文出处} %论文出处
 \author{作者姓名} %作者姓名
-\date{\today} %日期，默认当日
+\date{\number\year 年 \number\month 月} %日期，默认当月
 \school{院系名称} %院系名称
 \classnum{专业班级} %专业班级
 \stunum {U201300000} %学号
@@ -11,7 +11,7 @@
 %添加自己要用的其他宏包
 \usepackage{xltxtra}
 \usepackage{bm}
-
+\usepackage{pdfpages}
 \begin{document}
     %生成标题页 \maketitle[可选参数]
     %可选参数：
@@ -19,14 +19,14 @@
     %line length=12em 填写信息处横线的长度，默认12em
     %line font=huawenzhongsong 填写信息的字体，默认huawenzhongsong
     \maketitle
-    
+    \includepdf{page2.pdf}
     %生成声明与授权书页 \statement[可选参数]
     %可选参数：
     %confidentiality=yes/no/true/false/empty 是否保密，yes/true为保密；no/false为不保密，empty为不填，默认为empty
     %year=5 保密年数，默认为空
-    \statement
+    % \statement
     
-    \clearpage %结束上一页
+    % \clearpage %结束上一页
     \pagenumbering{Roman} %摘要页码为大写罗马数字
     
     %填写中文摘要内容和关键字
@@ -45,7 +45,7 @@
         
         This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. This is abstract. 
     \end{enabstract}
-    
+
     %生成目录 \tableofcontents[可选参数]
     %可选参数：
     %pagenum=yes/no/true/false 目录是否显示页码，默认为false
@@ -66,10 +66,17 @@
     %paragraph dot sep=4.5 目录第五级的点间距，默认是4.5
     %subparagraph dot sep=4.6 目录第六级的点间距，默认是4.5
     %请注意在合适的位置放置\pagenumbering{numstyle}使用新的页码
-    \tableofcontents
+    % \tableofcontents
     
-    \clearpage%结束上一页
+    % \clearpage%结束上一页
     \pagenumbering{arabic} %正文页码为阿拉伯数字
+    \makehead{论文题目}
+
+    % 如果不希望为摘要单列一页, 可使用\paragraph代替
+    % \paragraph{摘要}
+    %   摘要内容
+    % \paragraph{关键词}
+    %   This is abstract.
     
     %正文内容从这里开始
     \section{第一节}
@@ -208,11 +215,11 @@
         \item 第三项
     \end{itemize}
     
-    \begin{thankpage}
-        感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师
+    % \begin{thankpage}
+    %   感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师
         
-        感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师
-    \end{thankpage}
+    %   感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师
+    % \end{thankpage}
     
     %生成参考文献
     %使用方法：\bibliography{参考文件1文件名, 参考文献2文件名, ...}
