--- a/ExampleTrans/exampleTrans.tex
+++ b/ExampleTrans/exampleTrans.tex
@@ -233,5 +233,8 @@
         \subsubsubsection{附录中也有小小小节}
         \verb|\autoref|无法识别Appendices环境，引用效果和正文一样，如\autoref{apxsubsubsec:appendix}。所以如果引用附录的话，建议直接使用附录~\ref{apxsubsubsec:appendix}~。
     \end{appendices}
-    
+    % 可插入翻译文献原文
+    % \clearpage
+    % \includepdf{xx.pdf}
+
 \end{document}
