--- a/ExampleTrans/exampleTrans.tex
+++ b/ExampleTrans/exampleTrans.tex
@@ -80,7 +80,7 @@
     
     %正文内容从这里开始
     \section{第一节}
-    这是小四号的正文字体，段间距1.5倍
+    这是五号的正文字体，段间距1.5倍
     
     通过空一行实现段落换行，仅仅是回车并不会产生新的段落
     \par 也可以通过\verb|\par|命令来新起一段
@@ -233,6 +233,7 @@
         \subsubsubsection{附录中也有小小小节}
         \verb|\autoref|无法识别Appendices环境，引用效果和正文一样，如\autoref{apxsubsubsec:appendix}。所以如果引用附录的话，建议直接使用附录~\ref{apxsubsubsec:appendix}~。
     \end{appendices}
+    
     % 可插入翻译文献原文
     % \clearpage
     % \includepdf{xx.pdf}
